Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/lab/lab_agent_referece_book.xhtml
+++ b/src/main/webapp/lab/lab_agent_referece_book.xhtml
@@ -12,10 +12,10 @@
 
         <h:form>
 
-            <p:panel header="Cannel Agent Reference Book" styleClass="verticalAndHorizontalCenteringLarge">
+            <p:panel header="Collecting Centre Reference Book" styleClass="verticalAndHorizontalCenteringLarge">
 
                 <p:panelGrid columns="2" >
-                    <p:outputLabel value="Agent Name" />
+                    <p:outputLabel value="Collecting Centre Name" />
                     <p:autoComplete converter="deal" value="#{agentReferenceBookController.agentReferenceBook.institution}" 
                                     forceSelection="true"
                                     completeMethod="#{institutionController.completeCollectingCenter}" 
