--- a/src/main/webapp/lab/institutions_udate_credit_limit.xhtml
+++ b/src/main/webapp/lab/institutions_udate_credit_limit.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Agency Credit Limits" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Collecting Centre Credit Limits" styleClass="verticalAndHorizontalCenteringLarge">
 
                     <div id="Temp" style="position: relative;left: 0%;">
                         <h:panelGrid id ="gpVeda" columns="2" >
@@ -32,7 +32,7 @@
                                         </h:inputText>
 
                                         <p:selectOneListbox  id="lstSelect"   value="#{institutionController.current}" style="min-width: 223px; height: 300px;">
-                                            <f:selectItems  value="#{institutionController.agencies}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                                            <f:selectItems  value="#{institutionController.collectingCentre}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
                                             <p:ajax event="change"   update="gpDetail" process="lstSelect" >
                                             </p:ajax>
                                         </p:selectOneListbox>
@@ -81,7 +81,7 @@
 
                                     </h:panelGrid>
                                     <h:panelGrid id="gpDetailButtons" columns="2">
-                                        <h:commandButton id="btnSave" value="Update Credit" action="#{institutionController.updateAgentCreditLimit}" styleClass="buttons">
+                                        <h:commandButton id="btnSave" value="Update Credit" action="#{institutionController.updateCollectingCentreCreditLimit}" styleClass="buttons">
                                         </h:commandButton>
                                         <p:defaultCommand target="btnSave"/>
                                     </h:panelGrid>
