--- a/src/main/webapp/lab/collecting_centre_bill_search_own.xhtml
+++ b/src/main/webapp/lab/collecting_centre_bill_search_own.xhtml
@@ -10,7 +10,7 @@
         <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content">
                 <h:form>
-                    <p:panel header="AGENT PAYMENT BILL SEARCH" >
+                    <p:panel header="COLLECTING CENTRE PAYMENT BILL SEARCH" >
                         <f:facet name="header" >
                             <h:panelGroup>                               
                                 <h:panelGrid columns="5" >
@@ -21,7 +21,7 @@
                                     <h:outputLabel value="To Date"/>
                                     <p:calendar id="toDate" value="#{searchController.toDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" >                                                                              
                                     </p:calendar>
-                                    <p:commandButton id="btnSearch" ajax="false" value="Search" action="#{searchController.createChannelAgencyPaymentTable}" onclick="onSubmitButton();"/>
+                                    <p:commandButton id="btnSearch" ajax="false" value="Search" action="#{searchController.createCollectingCentrePaymentTable}" onclick="onSubmitButton();"/>
                                     <p:spacer height="30"/><h:outputLabel/><h:outputLabel/><h:outputLabel/><h:outputLabel/>
 
                                     <h:outputLabel value="Bill No"/>
@@ -40,13 +40,13 @@
 
                         <p:dataTable id="tblBills" value="#{searchController.bills}" var="bill"  >
                             <p:column headerText="Bill No" >
-                                <h:commandLink action="agent_bill_reprint" value="#{bill.insId}">
+                                <h:commandLink action="/agent_bill_reprint" value="#{bill.insId}">
                                     <h:outputLabel  ></h:outputLabel>
                                     <f:setPropertyActionListener value="#{bill}" target="#{agentPaymentReceiveSearchController.bill}"/>
                                 </h:commandLink>
                             </p:column>                                            
                             <p:column headerText="Billed at"  >
-                                <h:commandLink action="agent_bill_reprint" >
+                                <h:commandLink action="/agent_bill_reprint" >
                                     <h:outputLabel value="#{bill.createdAt}" >
                                         <f:convertDateTime pattern="dd/MMM/yyyy - hh:mm:ss a"/>
                                     </h:outputLabel>
@@ -62,7 +62,7 @@
                             
                             </p:column>  
                             <p:column headerText="Billed by" >
-                                <h:commandLink action="agent_bill_reprint" >
+                                <h:commandLink action="/agent_bill_reprint" >
                                     <h:outputLabel value="#{bill.creater.webUserPerson.name}" >                                      
                                     </h:outputLabel>
                                     <f:setPropertyActionListener value="#{bill}" target="#{agentPaymentReceiveSearchController.bill}"/>
@@ -74,22 +74,22 @@
                                     </h:outputLabel>
                                 </h:panelGroup>                               
                             </p:column>    
-                            <p:column headerText="Agent Code" >
-                                <h:commandLink action="agent_bill_reprint" >
+                            <p:column headerText="Collecting Centre Code" >
+                                <h:commandLink action="/agent_bill_reprint" >
                                     <h:outputLabel value="#{bill.fromInstitution.institutionCode}" ></h:outputLabel>
                                     <f:setPropertyActionListener value="#{bill}" target="#{agentPaymentReceiveSearchController.bill}"/>
                                 </h:commandLink>
                             </p:column>  
 
-                            <p:column headerText="Agent Name" >
-                                <h:commandLink action="agent_bill_reprint" >
+                            <p:column headerText="Collecting Centre Name" >
+                                <h:commandLink action="/agent_bill_reprint" >
                                     <h:outputLabel value="#{bill.fromInstitution.name}" ></h:outputLabel>
                                     <f:setPropertyActionListener value="#{bill}" target="#{agentPaymentReceiveSearchController.bill}"/>
                                 </h:commandLink>
                             </p:column>  
 
                             <p:column headerText="Net Value" styleClass="averageNumericColumn">
-                                <h:commandLink action="agent_bill_reprint" >
+                                <h:commandLink action="/agent_bill_reprint" >
                                     <h:outputLabel value="#{bill.netTotal}" >
                                         <f:convertNumber pattern="#,##0.00"/>
                                     </h:outputLabel>
