--- a/src/main/webapp/lab_administration.xhtml
+++ b/src/main/webapp/lab_administration.xhtml
@@ -61,6 +61,7 @@
                                     
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Add Lab Book to Collecting Centre" actionListener="#{investigationController.listAllIxs}" action="/lab/lab_agent_referece_book" onclick="onSubmitButton();" />
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Collecting Centre Credit Limit Update" actionListener="#{investigationController.listAllIxs}" action="/lab/institutions_udate_credit_limit" onclick="onSubmitButton();" />
+                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Collecting Centre History" actionListener="#{investigationController.listAllIxs}" action="/reportLab/collecting_centre_report_agent_history" onclick="onSubmitButton();" />
                                 </p:panel>
                             </h:panelGrid>
 
