--- a/src/main/webapp/agent_bill_cancel.xhtml
+++ b/src/main/webapp/agent_bill_cancel.xhtml
@@ -16,9 +16,14 @@
                                                required="true"  >
                                 <f:selectItems value="#{enumController.paymentMethodsWithoutCredit}"/>
                             </p:selectOneMenu>
-                            <p:commandButton ajax="false" value="Cancel" action="#{agentPaymentReceiveSearchController.cancelBill()}" style="float: right;" 
-                                             onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
+                            <p:commandButton ajax="false" value="Cancel" action="#{agentPaymentReceiveSearchController.channellAgencyCancelBill}" style="float: right;"  
+                                             rendered="#{agentPaymentReceiveSearchController.bill.billType eq 'AgentPaymentReceiveBill'}" onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
                                                          return false;"/>
+                            
+                            <p:commandButton ajax="false" value="Cancel" action="#{agentPaymentReceiveSearchController.collectingCentreCancelBill}" style="float: right;"  
+                                             rendered="#{agentPaymentReceiveSearchController.bill.billType eq 'CollectingCentrePaymentReceiveBill'}" onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
+                                                         return false;"/>
+                            
                         </p:panel>
                         <p:panelGrid columns="2" style="width: 100%;">
                             <p:panel header="Person Detail">
