--- a/src/main/webapp/lab/institutions_udate_credit_limit.xhtml
+++ b/src/main/webapp/lab/institutions_udate_credit_limit.xhtml
@@ -27,8 +27,9 @@
 
                                 <p:panel >
                                     <h:panelGrid id="gpSelectText" >
+                                        
                                         <h:inputText autocomplete="off" id="txtSearch" value="#{institutionController.selectText}" >
-                                            <f:ajax execute="txtSearch" render="lstSelect" event="keyup" />
+                                            <f:ajax execute="txtSearch" render="lstSelect" event="keyup" listener="#{institutionController.fetchSelectedCollectingCentre}" />
                                         </h:inputText>
 
                                         <p:selectOneListbox  id="lstSelect"   value="#{institutionController.current}" style="min-width: 223px; height: 300px;">
