--- a/src/main/webapp/lab/institutions_udate_credit_limit.xhtml
+++ b/src/main/webapp/lab/institutions_udate_credit_limit.xhtml
@@ -77,7 +77,7 @@
                                         
                                          <h:outputText value="Balance" >                                        
                                         </h:outputText>
-                                        <h:inputText autocomplete="off" value="#{institutionController.current.ballance}" >
+                                        <h:inputText autocomplete="off" disabled="true" value="#{institutionController.current.ballance}" >
                                         </h:inputText>
 
                                     </h:panelGrid>
