Add User Changes Lab Dynamic Lable Report Signed-off-by: HNDITDushan <s.t.dushan@mail.com>

--- a/src/main/webapp/admin_add_new_user.xhtml
+++ b/src/main/webapp/admin_add_new_user.xhtml
@@ -21,23 +21,33 @@
 
                             <p:panel header="Add New User" style="left:0px; right: 0px; top: 0px; bottom: 0px; margin: auto; display: inline-block;" >
                                 
-                                <h:panelGrid columns="2" style="text-align: left;" >
-                                    <h:outputText value="Name" ></h:outputText>
+                                <h:panelGrid id="pg1" columns="2" style="text-align: left;" >
+                                    <h:outputText value="Add Only User" ></h:outputText>
+                                    <p:selectBooleanCheckbox value="#{webUserController.createOnlyUser}" >
+                                        <p:ajax process="@this" update="pg1" listener="#{webUserController.onlyAddStaffListner()}" />
+                                    </p:selectBooleanCheckbox>
+                                    <h:outputText value="Add User To Exsisting Staff" ></h:outputText>
+                                    <p:selectBooleanCheckbox value="#{webUserController.createOnlyUserForExsistingUser}" >
+                                        <p:ajax process="@this" update="pg1" listener="#{webUserController.onlyAddStaffForExsistingUserListner()}" />
+                                    </p:selectBooleanCheckbox>
+                                    <h:outputText value="Staff" rendered="#{webUserController.createOnlyUserForExsistingUser}" ></h:outputText>
+                                    <autocomplete:completeStaff value="#{webUserController.staff}" rendered="#{webUserController.createOnlyUserForExsistingUser}" />
+                                    <h:outputText value="Name" rendered="#{!webUserController.createOnlyUserForExsistingUser}"></h:outputText>
                                     <p:inputText autocomplete="off"
-                                                 required="true" 
+                                                 required="true" rendered="#{!webUserController.createOnlyUserForExsistingUser}"
                                                  value="#{webUserController.current.webUserPerson.name}"
                                                  requiredMessage="Please enter a username"></p:inputText>
-                                    <h:outputText value="Address" ></h:outputText>
+                                    <h:outputText value="Address" rendered="#{!webUserController.createOnlyUserForExsistingUser}"></h:outputText>
                                     <p:inputText autocomplete="off" 
-                                                 required="true" 
+                                                 required="true" rendered="#{!webUserController.createOnlyUserForExsistingUser}"
                                                  value="#{webUserController.current.webUserPerson.address}"
                                                  requiredMessage="Please enter an address."></p:inputText>
-                                    <h:outputText value="Mobile" ></h:outputText>
-                                    <p:inputMask mask="999-9999999" required="true"
+                                    <h:outputText value="Mobile" rendered="#{!webUserController.createOnlyUserForExsistingUser}"></h:outputText>
+                                    <p:inputMask mask="999-9999999" required="true" rendered="#{!webUserController.createOnlyUserForExsistingUser}"
                                                  value="#{webUserController.current.webUserPerson.mobile}"
                                                  requiredMessage="Plase enter a phone number"></p:inputMask>
-                                    <h:outputText value="Speciality" ></h:outputText>                                            
-                                    <autocomplete:completeSpeciality value="#{webUserController.speciality}"/>
+                                    <h:outputText value="Speciality" rendered="#{!webUserController.createOnlyUserForExsistingUser}" ></h:outputText>                                            
+                                    <autocomplete:completeSpeciality value="#{webUserController.speciality}" disable="#{webUserController.createOnlyUser}" rendered="#{!webUserController.createOnlyUserForExsistingUser}"/>
 
                                     <h:outputText value="User Name"   ></h:outputText>
                                     <p:inputText autocomplete="off" required="true" maxlength="50" value="#{webUserController.current.name }" ></p:inputText>
@@ -49,15 +59,16 @@
                                     <p:password id="pw2" required="true" maxlength="15" value="#{webUserController.current.webUserPassword}" />
 
 
-                                    <h:outputText value="Institution" ></h:outputText>
-                                    <autocomplete:institution value="#{webUserController.current.institution}" ></autocomplete:institution>
+                                    <h:outputText value="Institution" rendered="#{!webUserController.createOnlyUserForExsistingUser}"></h:outputText>
+                                    <autocomplete:institution value="#{webUserController.institution}" rendered="#{!webUserController.createOnlyUserForExsistingUser}"></autocomplete:institution>
 
+                                    <h:outputText value="Department" rendered="#{!webUserController.createOnlyUserForExsistingUser}"></h:outputText>
+                                    <autocomplete:department value="#{webUserController.department}" rendered="#{!webUserController.createOnlyUserForExsistingUser}"></autocomplete:department>
+                                    
+                                    <h:outputLabel value="Code" rendered="#{!webUserController.createOnlyUserForExsistingUser}"></h:outputLabel>
+                                    <p:inputText autocomplete="off" required="true" value="#{webUserController.current.code}" maxlength="10" rendered="#{!webUserController.createOnlyUserForExsistingUser}" ></p:inputText>
 
-                                    <h:outputLabel value="Code" ></h:outputLabel>
-                                    <p:inputText autocomplete="off" required="true" value="#{webUserController.current.code}" maxlength="10" ></p:inputText>
-
-
-                                    <p:commandButton id="btnCreateUser" value="Create User" action="staff_login" actionListener="#{webUserController.saveNewUser()}" ajax="false" onclick="onSubmitButton();" >
+                                    <p:commandButton id="btnCreateUser" value="Create User" action="#{webUserController.saveNewUser()}" ajax="false" onclick="onSubmitButton();" >
                                     </p:commandButton>
                                     <p:defaultCommand target="btnCreateUser"/>
                                 </h:panelGrid>
