--- a/src/main/webapp/lab_administration.xhtml
+++ b/src/main/webapp/lab_administration.xhtml
@@ -55,6 +55,7 @@
                                 <p:panel header="Setup" style="width: 400px;margin: auto;" collapsed="false" toggleable="true">
                                     
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Report Samples" actionListener="#{investigationController.listAllIxs}" action="/lab/report_samples" onclick="onSubmitButton();" />
+                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Report Dynamic Lables" action="/lab/report_dynamic_lables" onclick="onSubmitButton();" />
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Developer" action="lab_administration_extra" onclick="onSubmitButton();" />
                                 </p:panel>
                                 
