report update Signed-off-by: lahirumadushanka <lahirumadushanka2100@gmail.com>

--- a/src/main/webapp/reportCashier/report_cashier_detailed_by_user_by_reciptno.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier_detailed_by_user_by_reciptno.xhtml
@@ -146,6 +146,14 @@
                         <ca:agentCancel  data="#{commonReport.userAgentRecieveBillCancel}" />
 
                         <p:spacer height="30"/>
+                        
+                        <ca:collecting_centre_bill data="#{commonReport.collectingCentreRecieves}"/>
+
+                        <p:spacer height="30"/>
+
+                        <ca:collecting_centre_cancel  data="#{commonReport.collectingCentreCancelBill}" />
+
+                        <p:spacer height="30"/>
 
                         <ca:inwrdPaymentBill data="#{commonReport.userInwardPaymentBillsOwn}"/>
 
