--- a/src/main/webapp/resources/cashier/agentCancel.xhtml
+++ b/src/main/webapp/resources/cashier/agentCancel.xhtml
@@ -115,6 +115,7 @@
                             </h:outputLabel>
                         </f:facet>
                     </p:column>
+                    <p:column colspan="4"></p:column>
                 </p:row>                   
             </p:columnGroup> 
         </p:dataTable>
