--- a/src/main/webapp/collecting_centre/bill.xhtml
+++ b/src/main/webapp/collecting_centre/bill.xhtml
@@ -318,7 +318,7 @@
                                                     <p:outputLabel value="Referring Doctor"></p:outputLabel>
                                                 </p:column>
                                                 <p:column >
-                                                    <p:autoComplete class="mediuminput" forceSelection="true" id="cmbDoc" value="#{collectingCentreBillController.referredBy}" completeMethod="#{doctorController.completeDoctor}" var="ix" itemLabel="#{ix.person.name}" itemValue="#{ix}" size="30"  style="width: 200px;float: left;">
+                                                    <p:autoComplete styleClass="mediuminput" forceSelection="true" id="cmbDoc" value="#{collectingCentreBillController.referredBy}" completeMethod="#{doctorController.completeDoctor}" var="ix" itemLabel="#{ix.person.name}" itemValue="#{ix}" size="30"  style="width: 200px;float: left;">
                                                     </p:autoComplete>
                                                     <p:spacer width="20" height="1" ></p:spacer>
                                                     <p:commandButton id="btnAddNewDoc" type="button" value="Add" onclick="dlg.show();" actionListener="#{doctorController.prepareAdd}" process="btnAddNewDoc" update="#{p:component('panDoc')}" style="float: right;"/>  
