--- a/src/main/webapp/reportLab/collecting_centre_report_agent_history.xhtml
+++ b/src/main/webapp/reportLab/collecting_centre_report_agent_history.xhtml
@@ -37,7 +37,7 @@
                                 <p:printer target="reportPrint"  />
                             </p:commandButton>
 
-                            <p:commandButton actionListener="#{channelReportController.createAgentHistoryTable}" ajax="false" value="Excel" styleClass="noPrintButton">
+                            <p:commandButton actionListener="#{channelReportController.createCollectingCentreHistoryTable}" ajax="false" value="Excel" styleClass="noPrintButton">
                                 <pe:exporter type="xlsx" target="tbl1" fileName="collecting_centre_report_agent_history"  />
                             </p:commandButton>
                         </h:panelGrid>
