--- a/src/main/webapp/resources/cashier/collecting_centre_bill.xhtml
+++ b/src/main/webapp/resources/cashier/collecting_centre_bill.xhtml
@@ -15,7 +15,7 @@
     <cc:implementation>
         <p:dataTable id="agent" value="#{cc.attrs.data.bills}" var="b7"   sortBy="#{b7.billType}" rendered="#{cc.attrs.data.bills.size()>0}">
             <f:facet name="header">  
-                <h:outputLabel value="Agent Payment Recieve"/>
+                <h:outputLabel value="Collocting Centre Payment Recieve"/>
             </f:facet> 
             <p:column headerText="Time" style="width:16%; ">
                 <f:facet name="header">  
@@ -32,9 +32,9 @@
                 </f:facet>
                 <h:outputLabel value="#{b7.insId}"/>
             </p:column>
-            <p:column headerText="Agent"  style="">      
+            <p:column headerText="Collocting Centre"  style="">      
                 <f:facet name="header">  
-                    <h:outputLabel value="Agent"/>
+                    <h:outputLabel value="Collocting Centre"/>
                 </f:facet>
                 <h:outputLabel value="#{b7.fromInstitution.name}" />
             </p:column>
