item update Signed-off-by: lahirumadushanka <lahirumadushanka2100@gmail.com>

--- a/src/main/webapp/dataAdmin/create_items_for_new_institution.xhtml
+++ b/src/main/webapp/dataAdmin/create_items_for_new_institution.xhtml
@@ -101,7 +101,7 @@
                                                  action="#{itemController.createNewItemsFromMasterItems}" ajax="false" ></p:commandButton>
 
                                 <p:commandButton value="Update Items"
-                                                 action="#{itemController.updateItemsAndFees}" ajax="false" ></p:commandButton>
+                                                 action="#{itemController.updateItemsFromMasterItems}" ajax="false" ></p:commandButton>
                             </p:panel>
 
                         </h:panelGrid>
