Signed-off-by: Ruhunu <ruhunuDump@gmail.com>

--- a/src/main/webapp/dataAdmin/lab_investigation_list_fee.xhtml
+++ b/src/main/webapp/dataAdmin/lab_investigation_list_fee.xhtml
@@ -48,9 +48,7 @@
                             <f:facet name="header">
                                 <h:outputLabel value="Investigation Name"/>    
                             </f:facet>
-                            <h:outputLabel value="#{ix.item.name}" ></h:outputLabel><br/>
-                            <h:outputLabel value="#{ix.item.fullName}" ></h:outputLabel><br/>
-                            <h:outputLabel value="#{ix.item.printName}" ></h:outputLabel>
+                            <h:outputLabel value="#{ix.item.name}" ></h:outputLabel>
                         </p:column>
                         
                         <p:column headerText="Investigation Name" >
