--- a/src/main/webapp/dataAdmin/create_items_for_new_institution.xhtml
+++ b/src/main/webapp/dataAdmin/create_items_for_new_institution.xhtml
@@ -28,7 +28,7 @@
                                           rows="20"
                                           paginator="true"
                                           paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                          rowsPerPageTemplate="20,50,100"
+                                          rowsPerPageTemplate="20,50,100,500,1000,1500"
                                           >
 
                                 <p:column  selectionMode="multiple" style="width: 10px;">                            
@@ -101,7 +101,7 @@
                                                  action="#{itemController.createNewItemsFromMasterItems}" ajax="false" ></p:commandButton>
 
                                 <p:commandButton value="Update Items"
-                                                 action="#{itemController.updateItemsAndFees}" ajax="false" ></p:commandButton>
+                                                 action="#{itemController.updateItemsFromMasterItems}" ajax="false" ></p:commandButton>
                             </p:panel>
 
                         </h:panelGrid>
