--- a/src/main/webapp/lab/institutions_udate_credit_limit.xhtml
+++ b/src/main/webapp/lab/institutions_udate_credit_limit.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Agency Credit Limits" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Collecting Centre Credit Limits" styleClass="verticalAndHorizontalCenteringLarge">
 
                     <div id="Temp" style="position: relative;left: 0%;">
                         <h:panelGrid id ="gpVeda" columns="2" >
@@ -27,12 +27,13 @@
 
                                 <p:panel >
                                     <h:panelGrid id="gpSelectText" >
+                                        
                                         <h:inputText autocomplete="off" id="txtSearch" value="#{institutionController.selectText}" >
-                                            <f:ajax execute="txtSearch" render="lstSelect" event="keyup" />
+                                            <f:ajax execute="txtSearch" render="lstSelect" event="keyup" listener="#{institutionController.fetchSelectedCollectingCentre}" />
                                         </h:inputText>
 
                                         <p:selectOneListbox  id="lstSelect"   value="#{institutionController.current}" style="min-width: 223px; height: 300px;">
-                                            <f:selectItems  value="#{institutionController.agencies}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                                            <f:selectItems  value="#{institutionController.collectingCentre}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
                                             <p:ajax event="change"   update="gpDetail" process="lstSelect" >
                                             </p:ajax>
                                         </p:selectOneListbox>
@@ -76,12 +77,12 @@
                                         
                                          <h:outputText value="Balance" >                                        
                                         </h:outputText>
-                                        <h:inputText autocomplete="off" value="#{institutionController.current.ballance}" >
+                                        <h:inputText autocomplete="off" disabled="true" value="#{institutionController.current.ballance}" >
                                         </h:inputText>
 
                                     </h:panelGrid>
                                     <h:panelGrid id="gpDetailButtons" columns="2">
-                                        <h:commandButton id="btnSave" value="Update Credit" action="#{institutionController.updateAgentCreditLimit}" styleClass="buttons">
+                                        <h:commandButton id="btnSave" value="Update Credit" action="#{institutionController.updateCollectingCentreCreditLimit}" styleClass="buttons">
                                         </h:commandButton>
                                         <p:defaultCommand target="btnSave"/>
                                     </h:panelGrid>
