Signed-off-by: lahirumadushanka <lahirumadushanka2100@gmail.com>

--- a/src/main/webapp/reportInstitution/report_cash_category_without_pro_day.xhtml
+++ b/src/main/webapp/reportInstitution/report_cash_category_without_pro_day.xhtml
@@ -88,6 +88,10 @@
             <in:agent_collection id="agent_collection"/>
 
             <p:spacer height="30"/>
+            
+            <in:collecting_centre_collection id="collecting_centre_collection"/>
+
+            <p:spacer height="30"/>
 
             <in:credit_collection_opd 
                 id="credit_collection"/>
