Signed-off-by: HNDITDushan <s.t.dushan@mail.com>

--- a/src/main/webapp/pharmacy/pharmacy_purhcase_order_request.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_purhcase_order_request.xhtml
@@ -108,7 +108,7 @@
                         #{bi.item.name} 
                     </p:column>
 
-                    <p:column headerText="Code" class="shortNumericColumn"  >  
+                    <p:column headerText="Code" styleClass="shortNumericColumn"  >  
                         #{bi.item.code} 
                     </p:column>
 
