--- a/src/main/webapp/dataAdmin/report_entered_data.xhtml
+++ b/src/main/webapp/dataAdmin/report_entered_data.xhtml
@@ -20,6 +20,7 @@
                                     <h:panelGrid columns="1">
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Investigation List" action="lab_investigation_list" onclick="onSubmitButton();"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Investigation Fee List" action="lab_investigation_list_fee" onclick="onSubmitButton();"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Investigation With Fees" action="lab_investigation_list_fee_1" onclick="onSubmitButton();"/>
                                     </h:panelGrid>
                                 </p:panel>
 
