--- a/src/main/webapp/dataAdmin/lab_investigation_list.xhtml
+++ b/src/main/webapp/dataAdmin/lab_investigation_list.xhtml
@@ -36,15 +36,22 @@
                         <h:outputLabel value="#{labels.company_name}" style="font-size: 20px;"></h:outputLabel>
                         <br> </br>
                         <h:outputLabel value="Lab Investigation List" style="font-family: serif;" ></h:outputLabel>
-                        <br> </br>
-                        <h:outputLabel value="2013 / 2014"></h:outputLabel>
                     </div>
 
+                    <p:commandButton value="Delete Selected" action="#{investigationController.deleteSelectedItems}" ajax="false" ></p:commandButton>
+                    <p:commandButton value="Un-Delete Selected" action="#{investigationController.unDeleteSelectedItems}" ajax="false" ></p:commandButton>
 
-                    <p:dataTable id="tbl" rowIndexVar="rowIndex" value="#{investigationController.items}" var="ix"  >
+
+                    <p:dataTable id="tbl" rowIndexVar="rowIndex" value="#{investigationController.items}" var="ix"  
+                                 selection="#{investigationController.selectedInvestigations}"  
+                                 rowKey="#{ix.id}">
                         <f:facet name="header">
-                            <h:outputLabel value="Investigation List 2013/2014"/>
+                            <h:outputLabel value="Investigation List"/>
                         </f:facet>
+
+                        <p:column  selectionMode="multiple" style="width: 10px;">                            
+                        </p:column>
+
                         <p:column headerText="No." style="width: 10%;" >
                             <f:facet name="header">
                                 <h:outputLabel value="No" style="font-weight: bold;"/>
@@ -61,7 +68,7 @@
                             <f:facet name="header">
                                 <h:outputLabel value="Investigation Category"/>
                             </f:facet>
-                             <h:outputLabel value="#{ix.investigationCategory.name}" ></h:outputLabel>
+                            <h:outputLabel value="#{ix.investigationCategory.name}" ></h:outputLabel>
                         </p:column>
                         <p:column headerText="Institution Name"  
                                   style="width: 20%;" 
@@ -75,8 +82,16 @@
                             <f:facet name="header">
                                 <h:outputLabel value="Machine Name"/>
                             </f:facet>
-                             <h:outputLabel value="#{ix.machine.name}" ></h:outputLabel>
+                            <h:outputLabel value="#{ix.machine.name}" ></h:outputLabel>
                         </p:column>
+                        
+                        <p:column headerText="Retired"  style="width: 20%;" sortBy="#{ix.retired}" filterBy="#{ix.retired}">
+                            <f:facet name="header">
+                                <h:outputLabel value="Retired"/>
+                            </f:facet>
+                            <h:outputLabel value="#{ix.retired}" ></h:outputLabel>
+                        </p:column>
+                        
                         <p:column headerText="Department Name"  
                                   style="width: 20%;" 
                                   sortBy="#{ix.department.name}">
