--- a/src/main/webapp/lab_investigation.xhtml
+++ b/src/main/webapp/lab_investigation.xhtml
@@ -48,7 +48,7 @@
 
                                     <p:selectOneListbox converter="ixcon"   id="lstSelect"   value="#{investigationController.current}" style="min-width: 223px; height: 300px;">
                                         <f:selectItems  value="#{investigationController.institutionSelectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
-                                        <p:ajax event="change"   update="gpDetail" process="lstSelect" >
+                                        <p:ajax event="change"   update="gpDetail :#{p:component('detailPan')}" process="lstSelect" >
                                         </p:ajax>
                                     </p:selectOneListbox>
                                 </h:panelGrid>
@@ -62,9 +62,11 @@
                             </p:panel>
                         </h:panelGrid  >
 
-                        <p:panel >
+                        <p:panel id="detailPan" >
                             <f:facet name="header" >
                                 <h:outputLabel value="Details" ></h:outputLabel>
+                                <h:outputLabel value="Active" rendered="#{investigationController.current.active}"></h:outputLabel>
+                                <h:outputLabel value="Inactive" rendered="#{!investigationController.current.active}"></h:outputLabel>
                                 <p:commandButton style="float:right;" id="btnSave" value="Save" 
                                                  action="#{investigationController.saveSelected()}" styleClass="buttons" 
                                                  ajax="false" onclick="onSubmitButton();"  >
@@ -175,6 +177,9 @@
                                         <f:selectItem itemLabel="Please select Charge"/>
                                         <f:selectItems value="#{enumController.inwardChargeTypesForSetting}" var="i" itemLabel="#{i.label}" itemValue="#{i}"/>
                                     </p:selectOneMenu>
+                                    
+                                    <h:outputText value="" ></h:outputText>
+                                    <p:selectBooleanCheckbox value="#{investigationController.current.active}" itemLabel="Item Active"/>
 
                                     <h:outputText value="" ></h:outputText>
                                     <p:selectBooleanCheckbox value="#{investigationController.current.userChangable}" itemLabel="Can change Rate"/>
