--- a/src/main/webapp/resources/inward/bill/finalBill.xhtml
+++ b/src/main/webapp/resources/inward/bill/finalBill.xhtml
@@ -220,9 +220,9 @@
                                                                 </td>
                                                                 <td>
 
-                                                                    <h:outputLabel value="#{fe.referencePatientRoom.adjustedRoomCharge}" style="text-align: center;font-size: 9px!important;" >
+<!--                                                                    <h:outputLabel value="#{fe.referencePatientRoom.adjustedRoomCharge}" style="text-align: center;font-size: 9px!important;" >
                                                                         <f:convertNumber pattern="#,##0.00" />
-                                                                    </h:outputLabel>                                                                
+                                                                    </h:outputLabel>                                                                -->
                                                                 </td>
                                                             </tr>
                                                         </h:panelGroup>
